--- a/index.html
+++ b/index.html
@@ -3,100 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rwanda Smart Market - Price Comparison</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Market Compare</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="app">
         <!-- Header -->
-        <header>
-            <div class="header-content">
-                <div class="header-left">
-                    <h1>🛒 Rwanda Smart Market</h1>
-                    <p>Compare prices • Save money • Shop smarter</p>
+        <header class="header">
+            <h1>Market Compare</h1>
+            <p class="subtitle">Find best prices in Kgali</p>
+            
+            <div class="top-controls">
+                <div class="search-box">
+                    <input type="text" placeholder="Search" class="search-input" id="searchInput">
                 </div>
-                <div class="header-right">
-                    <div class="cart-badge" id="cartBadge">
-                        <span>🛍️</span>
-                        <span id="cartCount">0</span>
-                    </div>
+                <div class="header-buttons">
+                    <button class="header-btn">Profile</button>
+                    <button class="header-btn">Settings</button>
                 </div>
             </div>
         </header>
 
-        <!-- Tabs -->
-        <div class="tabs">
-            <button class="tab-btn active" data-tab="search">
-                🔍 Search Products
-            </button>
-            <button class="tab-btn" data-tab="list">
-                🛒 Shopping List (<span id="listCount">0</span>)
-            </button>
-            <button class="tab-btn" data-tab="trends">
-                📊 Price Trends
-            </button>
-        </div>
+        <!-- Main Content -->
+        <main class="main-content">
+            <!-- Device ID -->
+            <div class="device-id">C8583V8</div>
 
-        <!-- Tab Content -->
-        <main>
-            <!-- Search Tab -->
-            <div class="tab-content active" id="search-tab">
-                <div class="search-section">
-                    <div class="search-grid">
-                        <input type="text" id="searchInput" placeholder="Search products (e.g., milk, rice, bread)...">
-                        <select id="categoryFilter">
-                            <option value="all">All Categories</option>
-                            <option value="dairy">Dairy Products</option>
-                            <option value="grains">Grains & Cereals</option>
-                            <option value="fruits">Fresh Fruits</option>
-                            <option value="vegetables">Vegetables</option>
-                        </select>
-                        <select id="sortFilter">
-                            <option value="price-low">Price: Low to High</option>
-                            <option value="price-high">Price: High to Low</option>
-                            <option value="savings">Highest Savings</option>
-                        </select>
-                        <button id="searchBtn">🔍 Search</button>
-                    </div>
-
-                    <div class="quick-search">
-                        <span>Quick searches:</span>
-                        <button class="quick-btn" data-search="milk">Milk</button>
-                        <button class="quick-btn" data-search="rice">Rice</button>
-                        <button class="quick-btn" data-search="bread">Bread</button>
-                        <button class="quick-btn" data-search="eggs">Eggs</button>
-                        <button class="quick-btn" data-search="sugar">Sugar</button>
-                    </div>
-
-                    <div class="api-info">
-                        🔌 <strong>API Integration:</strong> Uses Open Food Facts API for real-time data
-                    </div>
-                </div>
-
-                <div id="results"></div>
+            <!-- Quick Products -->
+            <div class="quick-products">
+                <div class="product-button" onclick="loadProduct('milk')">Milk</div>
+                <div class="product-button" onclick="loadProduct('bread')">Bread</div>
+                <div class="product-button" onclick="loadProduct('rice')">Rice</div>
+                <div class="product-button" onclick="loadProduct('eggs')">Eggs</div>
+                <div class="product-button" onclick="loadProduct('sugar')">Sugar</div>
             </div>
 
-            <!-- Shopping List Tab -->
-            <div class="tab-content" id="list-tab">
-                <div class="shopping-list-container">
-                    <h2>Your Shopping List</h2>
-                    <div id="shoppingListItems"></div>
-                    <div id="priceComparison"></div>
+            <!-- Product Title -->
+            <div class="product-title" id="productTitle">Prawn Crackers</div>
+
+            <!-- Market Comparison -->
+            <div class="market-comparison">
+                <div class="market-cards" id="marketCards">
+                    <!-- Market cards will be loaded here -->
                 </div>
             </div>
 
-            <!-- Price Trends Tab -->
-            <div class="tab-content" id="trends-tab">
-                <div class="trends-container">
-                    <h2>📊 Price Trends & Analytics</h2>
-                    <div id="trendsContent"></div>
-                </div>
-            </div>
+            <!-- Loading State -->
+            <div class="loading hidden" id="loading">Loading prices...</div>
         </main>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <p>Powered by Open Food Facts API</p>
+        </footer>
     </div>
 
-    <script src="js/config.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
